--- a/Credit_Risk/credit_risk_classification.ipynb
+++ b/Credit_Risk/credit_risk_classification.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-28T16:54:57.537236Z",
-     "start_time": "2024-09-28T16:54:57.524479Z"
+     "end_time": "2024-10-01T02:13:39.359992Z",
+     "start_time": "2024-10-01T02:13:38.228415Z"
     }
    },
    "source": [
@@ -17,14 +17,13 @@
     "from pathlib import Path\n",
     "from sklearn.metrics import confusion_matrix, classification_report\n",
     "\n",
-    "from warnings import filterwarnings\n",
-    "\n",
     "from sqlalchemy.dialects.mssql.information_schema import columns\n",
     "\n",
+    "from warnings import filterwarnings\n",
     "filterwarnings('ignore')"
    ],
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 1
   },
   {
    "attachments": {},
@@ -1048,29 +1047,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Question:** How well does the logistic regression model predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
-    "\n",
-    "**Answer:** \n",
-    "\n",
-    "The logistic regression model performs very well in predicting both labels, but there are differences in its performance for the 0 (healthy loan) and 1 (high-risk loan) classes.\n",
+    "The logistic regression model shows strong predictive performance for both labels, though there is a noticeable difference between the two.\n",
     "\n",
     "**Healthy Loan (0):**\n",
-    "Precision: 1.00 (This means that all instances predicted as healthy loans are indeed healthy loans.)\n",
-    "Recall: 0.99 (The model correctly identifies 99% of all actual healthy loans.)\n",
-    "F1-Score: 1.00 (The balance between precision and recall is perfect, meaning the model is very strong for this class.)\n",
     "\n",
+    "- **Precision**: 1.00 -- All predicted healthy loans are indeed healthy.\n",
+    "- **Recall**: 0.99 -- 99% of actual healthy loans are correctly identified.\n",
+    "- **F1-Score**: 1.00 -- A perfect balance between precision and recall.\n",
     "\n",
     "**High-Risk Loan (1):**\n",
-    "Precision: 0.85 (Out of all instances predicted as high-risk loans, 85% were correct.)\n",
-    "Recall: 0.94 (The model correctly identifies 94% of all actual high-risk loans.)\n",
-    "F1-Score: 0.89 (The harmonic mean of precision and recall shows good performance, though not as strong as for the healthy loans.)\n",
     "\n",
-    "**Overall Performance:**\n",
-    "Accuracy: 0.99 (The model is highly accurate across both classes.)\n",
-    "Macro Average: Precision: 0.92, Recall: 0.97, F1-Score: 0.94 (Indicating a slightly lower average performance across both classes.)\n",
-    "Weighted Average: Precision: 0.99, Recall: 0.99, F1-Score: 0.99 (The overall weighted performance is nearly perfect due to the dominance of the healthy loan class.)\n",
+    "- **Precision**: 0.85 -- 85% of predicted high-risk loans are correct.\n",
+    "- **Recall**: 0.94 -- The model identifies 94% of actual high-risk loans.\n",
+    "- **F1-Score**: 0.89 -- Good performance, though not as strong as for healthy loans.\n",
     "\n",
-    "In summary, the model predicts healthy loans (0) with very high accuracy, precision, and recall. It performs slightly less well on high-risk loans (1), with lower precision, meaning some predicted high-risk loans are false positives, but recall remains strong."
+    "#### **Overall Performance:**\n",
+    "\n",
+    "- **Accuracy**: 0.99 -- Very high overall accuracy.\n",
+    "- **Macro Avg**: Precision: 0.92, Recall: 0.97, F1-Score: 0.94 -- Slightly lower average across both classes.\n",
+    "- **Weighted Avg**: Precision: 0.99, Recall: 0.99, F1-Score: 0.99 -- Nearly perfect performance due to the larger number of healthy loans.\n",
+    "\n",
+    "#### **Summary:**\n",
+    "\n",
+    "The model excels at predicting healthy loans with near-perfect accuracy. For high-risk loans, the model's recall is excellent, meaning it captures most high-risk cases, though its precision is lower, indicating some false positives."
    ]
   },
   {
