--- a/Credit_Risk/credit_risk_classification.ipynb
+++ b/Credit_Risk/credit_risk_classification.ipynb
@@ -53,14 +53,14 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-28T16:58:28.529100Z",
-     "start_time": "2024-09-28T16:58:28.431443Z"
+     "end_time": "2024-10-01T02:52:36.421258Z",
+     "start_time": "2024-10-01T02:52:36.235542Z"
     }
    },
    "source": [
     "# Read the CSV file from the Resources folder into a Pandas DataFrame\n",
-    "# input_file_path = 'lending_data.csv'\n",
-    "raw_data = pd.read_csv('lending_data.csv', encoding='utf-8')\n",
+    "input_file_path = 'lending_data.csv'\n",
+    "raw_data = pd.read_csv(input_file_path, encoding='utf-8')\n",
     "\n",
     "# Review the DataFrame\n",
     "raw_data.head()"
@@ -173,12 +173,12 @@
        "</div>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 5
+   "execution_count": 2
   },
   {
    "attachments": {},
